5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1728_2496.log
== TEST (2019-05-15 14:42:37) 
-- CODE:
n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	print(n)
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:43:49) 
-- CODE:
n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	soma = n + soma
	print(soma)
	n = int(input("DIGITE UM NUMERO: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:44:31) 
-- CODE:
n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	soma = n + soma
	print(soma)
	n = int(input("DIGITE UM NUMERO: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:44:49) 
-- CODE:
n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	soma = n + soma
	print(soma)
	n = int(input("DIGITE UM NUMERO: "))
-- EXECUTION TIME:
0.135921
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:12) 
-- CODE:
n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	soma = n + soma
	print(soma)
	n = int(input("DIGITE UM NUMERO: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:53) 
-- CODE:
n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:52) 
-- CODE:
n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	print (n)
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:12) 
-- CODE:
soma = 0

n = int(input("DIGITE UM NUMERO: "))

while (n > -1):
	print (n)
	soma = n + soma
	
	if (n > -1):
		n = int(input("DIGITE UM NUMERO: "))
		print(n)
	else:
			soma = n + soma
			print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:40) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	print (n)
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:53) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	print (n)
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:51:08) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	print (n)
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	print(soma)
-- EXECUTION TIME:
0.182647
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
10953
32653
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:45) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	print (n)
	soma = n + soma
	print(soma)
	n = int(input("DIGITE UM NUMERO: "))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:52:06) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	print (n)
	soma = n + soma
	print(soma)
	n = int(input("DIGITE UM NUMERO: "))
	
-- EXECUTION TIME:
0.21265
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
10953
32653
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:46) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	print (n)
	soma = n + soma
	print(soma)
n = int(input("DIGITE UM NUMERO: "))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:21) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	soma = n + soma
	print(soma)
	n = int(input("DIGITE UM NUMERO: "))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:54:38) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	soma = n + soma
	print(soma)
	n = int(input("DIGITE UM NUMERO: "))	
-- EXECUTION TIME:
0.488415
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:54:56) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	soma = n + soma
	print(soma)
	n = int(input("DIGITE UM NUMERO: "))	
	print(soma)
-- EXECUTION TIME:
0.357915
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
10953
43606
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:09) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	soma = n + soma
	print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:54) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	soma = n + soma
	print(soma)
	n = int(input("DIGITE UM NUMERO: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:16) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	soma = n + soma
	print(soma)
	n = int(input("DIGITE UM NUMERO: "))]
	print(soma)
-- ERROR:
File "XXXX", line 6
    n = int(input())]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:24) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	soma = n + soma
	print(soma)
	n = int(input("DIGITE UM NUMERO: "))
	print(soma)
-- ERROR:
File "XXXX", line 6
    n = int(input())]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:45) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	print(soma)
-- ERROR:
File "XXXX", line 6
    n = int(input())]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:59:00) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	print(soma)
-- ERROR:
File "XXXX", line 6
    n = int(input())]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:59:14) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	
print(soma)
-- ERROR:
File "XXXX", line 6
    n = int(input())]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:59:27) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	
print(soma)
-- EXECUTION TIME:
0.175204
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:00:28) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	print(n)
print(soma)
-- ERROR:
File "XXXX", line 6
    n = int(input())]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:00:47) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	print(n)
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	print(n)
print(soma)
-- ERROR:
File "XXXX", line 6
    n = int(input())]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:01:15) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	print(n)
print(soma)
-- EXECUTION TIME:
0.16522
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
-1
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:01:27) 
-- CODE:
soma = 0
n = int(input("DIGITE UM NUMERO: "))
while (n > -1):
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	
print(soma)
-- EXECUTION TIME:
0.147182
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:07:27) 
-- CODE:

n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	
print(soma)

-- EXECUTION TIME:
0.198362
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:08:29) 
-- CODE:

n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	print(n)
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	
print(soma)

-- ERROR:
File "XXXX", line 6
    n = int(input())]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:08:47) 
-- CODE:

n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	print(n)
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	
print(soma)

-- EXECUTION TIME:
0.149197
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
32653
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:09:33) 
-- CODE:

n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	
print(soma)

-- EXECUTION TIME:
0.318624
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:11:11) 
-- CODE:

n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	
print(soma)

-- ERROR:
File "XXXX", line 6
    n = int(input())]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:12:14) 
-- CODE:

n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	
print(soma)

-- EXECUTION TIME:
0.148299
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:12:31) 
-- CODE:

n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	
print(soma)
n = int(input("DIGITE UM NUMERO: "))
-- ERROR:
File "XXXX", line 6
    n = int(input())]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:12:46) 
-- CODE:

n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	
print(soma)
n = int(input("DIGITE UM NUMERO: "))
-- EXECUTION TIME:
0.167153
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:13:14) 
-- CODE:

n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n > -1):
	
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	
print(soma)
-- EXECUTION TIME:
0.213493
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:17:02) 
-- CODE:

n = int(input("DIGITE UM NUMERO:AQUI"))
soma = 0
while (n > -1):
	
	soma = n + soma
	n = int(input("DIGITE UM NUMERO:AQUI"))
	
print(soma)
-- EXECUTION TIME:
0.165803
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:21:03) 
-- CODE:

n = int(input("DIGITE UM NUMERO:AQUI"))
soma = 0
while (n > -1):
	
	soma = n + soma
	n = int(input("DIGITE UM NUMERO:AQUI"))
soma = n + soma	
print(soma)
-- EXECUTION TIME:
0.189693
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
-1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:21:29) 
-- CODE:
n = int(input("DIGITE UM NUMERO:AQUI"))
soma = 0
while (n > -1):
	
	soma = n + soma
	n = int(input("DIGITE UM NUMERO:AQUI"))
	
print(soma)
-- EXECUTION TIME:
0.119185
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:23:28) 
-- CODE:
n = int(input("DIGITE UM NUMERO: "))
soma = 0
while (n != -1):
	
	soma = n + soma
	n = int(input("DIGITE UM NUMERO: "))
	
print(soma)
-- EXECUTION TIME:
0.135218
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
